--- a/hacking/fuzzing.html
+++ b/hacking/fuzzing.html
@@ -482,7 +482,7 @@ by Ben "epi" Risher 🤓                 ver: 2.10.3
                 </div>
                 <ul>
                     <li><marcador class="resaltado3">-n: </marcador>Desactiva la búsqueda recursiva, enfocándose solo en el nivel del directorio especificado sin escanear subdirectorios.</li>
-                    <li><marcador class="resaltado3">-C 200: </marcador>Muestra solo las respuestas con el código de estado HTTP 200 (OK), lo que indica que el recurso existe y es accesible.</li>
+                    <li><marcador class="resaltado3">-C 503: </marcador>Muestra solo las respuestas que no contengan el código de estado HTTP 503 (OK).</li>
                 </ul>
                 <div class="blog-image">
                     <img src="media/fuzz6.png" alt="">
