--- a/ia/pytorch.html
+++ b/ia/pytorch.html
@@ -79,11 +79,13 @@
                 <h2>Los Tensores</h2>
                 <p>Los tensores son la base de PyTorch y representan arreglos multidimensionales, similares a los arrays de NumPy, pero con la ventaja de poder ser ejecutados en GPU, lo que mejora el rendimiento en cálculos intensivos.</p>
                 <h6>Creación de un tensor básico:</h6>
-                <div class="archivo">import torch
+                <div class="archivo">
+import torch
 
 # Crear un tensor de 3x3 lleno de ceros
 tensor = torch.zeros(3, 3)
-print(tensor)</div>
+print(tensor)
+</div>
                 <p>Los tensores pueden ser manipulados fácilmente y transformados, y al igual que los arrays de NumPy, soportan operaciones matemáticas complejas, pero con la ventaja adicional de que PyTorch permite mover estos tensores entre CPU y GPU sin esfuerzo.</p>
                 <div class="blog-image">
                     <img src="media/pytorch2.jpg" alt="">
