--- a/hacking.html
+++ b/hacking.html
@@ -101,6 +101,10 @@
             <img src="media/hack2.png" alt="Firewall" class="article-image">
             <h2><a href="hacking/firewall.html">Firewall</a></h2>
         </div>  
+        <div class="article-section">
+            <img src="media/hack2.png" alt="Detección de amenazas y respuesta ante incidentes" class="article-image">
+            <h2><a href="hacking/respuesta.html">Detección de amenazas y respuesta ante incidentes</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/hack2.png" alt="En proceso" class="article-image">
